--- a/Lab 3/smart-room-assistant/package.json
+++ b/Lab 3/smart-room-assistant/package.json
@@ -11,8 +11,9 @@
     "start": "node src/index.js"
   },
   "dependencies": {
-    "axios": "^1.12.1",
+    "axios": "^1.12.2",
     "dotenv": "^17.2.2",
+    "ejs": "^3.1.10",
     "express": "^5.1.0",
     "pg": "^8.16.3"
   }
