--- a/Lab 3/smart-room-assistant/react/react_module/package.json
+++ b/Lab 3/smart-room-assistant/react/react_module/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bootstrap": "^5.3.8",
     "chart.js": "^4.5.0",
     "chartjs-adapter-date-fns": "^3.0.0",
     "chartjs-plugin-zoom": "^2.2.0",
